Ficed some layout issues, removed body margins

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,10 @@ a:hover {
   color: #535bf2;
 }
 
+body {
+  margin: 0;
+}
+
 .iphone {
   background-color: #000000;
   display: flex;
@@ -36,7 +40,8 @@ a:hover {
 .iphone .div {
   background-color: #000000;
   height: 2178px;
-  overflow: hidden;
+  /*overflow hides or reveals the extra feature cards*/
+  overflow: visible;
   position: relative;
   width: 390px;
 }
@@ -93,7 +98,7 @@ a:hover {
   letter-spacing: 0.48px;
   line-height: 22.7px;
   position: absolute;
-  top: 0;
+  top: 33px;
   width: 267px;
 }
 
@@ -237,11 +242,11 @@ a:hover {
   align-items: flex-start;
   display: flex;
   flex-direction: column;
-  gap: 25px;
+  gap: 4px;
   height: 106px;
   left: 19px;
   position: absolute;
-  top: 0;
+  top: 20px;
   width: 110px;
 }
 
@@ -269,11 +274,11 @@ a:hover {
   align-items: flex-start;
   display: flex;
   flex-direction: column;
-  gap: 25px;
+  gap: 4px;
   height: 105px;
   left: 117px;
   position: absolute;
-  top: 1px;
+  top: 20px;
   width: 200px;
 }
 
@@ -404,16 +409,17 @@ a:hover {
   letter-spacing: 0.48px;
   line-height: normal;
   position: absolute;
-  top: 0;
+  top: 12px;
   width: 286px;
 }
 
 .iphone .overlap-group-wrapper {
   height: 35px;
   left: 0;
-  position: absolute;
+  position: relative;
   top: 8px;
   width: 312px;
+  
 }
 
 .iphone .overlap-group-2 {
@@ -421,6 +427,22 @@ a:hover {
   left: -1px;
   position: relative;
   width: 313px;
+}
+
+.iphone .line-3 {
+  height: 2px;
+  left: 1px;
+  position: absolute;
+  top: 33px;
+  width: 312px;
+}
+
+.iphone .line-4 {
+  height: 35px;
+  left: 0;
+  position: absolute;
+  top: 37px;
+  width: 2px;
 }
 
 .iphone .overlap-7 {
@@ -456,7 +478,6 @@ a:hover {
 }
 
 .iphone .toggleButton {
-  height: 45px;
   left: 0;
   position: absolute;
   top: 91px;
@@ -627,7 +648,6 @@ a:hover {
 }
 
 .iphone .toggleButton2 {
-  height: 45px;
   left: 0;
   position: absolute;
   top: 13px;
@@ -700,7 +720,6 @@ a:hover {
 }
 
 .iphone .toggleButton3 {
-  height: 45px;
   left: 0;
   position: absolute;
   top: 15px;
